--- a/content/talk/2020-08-31-Meetup.MD
+++ b/content/talk/2020-08-31-Meetup.MD
@@ -93,4 +93,4 @@ Yourself/friends! And a laptop - this will be an interactive event.
 Our primary mission is to encourage more women and non-binary individuals to get involved in the R community. *As such, we strongly encourage that all men who attend this event have a female or non-binary sponsor, as spots may be limited. Please contact chicago@rladies.org if you have questions.*  
     
   
-Be sure to RSVP on [Meetup](https://www.meetup.com/rladies-chicago/events/269010701/)
+Be sure to RSVP on [Meetup](https://www.meetup.com/rladies-chicago/events/269010701/). Looking forward to it!
